# browser-storage-check

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/browser_storage_check/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_browser_storage_check.py
